[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Images/Enemies/enemy2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/death.png" type="Texture" id=2]
[ext_resource path="res://CanonHead.gd" type="Script" id=3]
[ext_resource path="res://hurtbox.gd" type="Script" id=4]
[ext_resource path="res://Ebullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sounds/Hit.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 77.5323, 244.406 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 95.5433, 261.357 )

[node name="CanonHead" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -18.0109, -87.9354 )
shape = SubResource( 2 )

[node name="hurtbox" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( -20.1298, -100.649 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Ebullet" parent="." instance=ExtResource( 5 )]
position = Vector2( 132, -287.59 )
scale = Vector2( 0.0931414, -0.0980101 )

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="wait" type="Timer" parent="."]
wait_time = 0.1
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="hurtbox" method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="hurtbox" method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="wait" to="." method="_on_wait_timeout"]
